# RadeonMon

./: .gitignore  CMakeLists.txt  CMakePresets.example.json  CMakePresets.json  LICENSE  README.md
include/radeonmon/: adlx.hpp  autostart.hpp  constants.hpp  cpugraph.hpp  globals.hpp  helpers.hpp  logging.hpp  networking.hpp  preferences.hpp  processwatcher.hpp  resource_ids.h  ryzen.hpp  ryzen_sdk.hpp  structures.hpp  version.hpp.in  version_checker.hpp  webserver.hpp
resources/: app.manifest  resources.rc  version.rc.in
src/: adlx.cpp  app.manifest  cpugraph.cpp  main.cpp  networking.cpp  ryzen.cpp  ryzen_delay_hook.cpp  ryzen_sdk.cpp  webserver.cpp
web/: index.html  index_light.html  script.js  styles.css
